<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->
    <header
        android:fragment="kr.ac.snu.hcil.customkeyboard.SettingsActivity$ExperimentPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_experiment" />

    <header
        android:fragment="kr.ac.snu.hcil.customkeyboard.SettingsActivity$MethodConfPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_method_conf" />

    <header
        android:fragment="kr.ac.snu.hcil.customkeyboard.SettingsActivity$OthersPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_others" />

</preference-headers>
